@startuml
interface Practica2.Graphs.iCreateDataBase {
~ CategoryDataset createDataBase(CSVFile,int,int)
}
class Practica2.Graphs.ChartDataBase {
+ CategoryDataset createDataBase(CSVFile,int,int)
}
abstract class Practica2.Graphs.Chart {
~ iCreateDataBase createDataBase
~ int xAxis
+ {abstract}void display()
}
class Practica2.Graphs.LineChart {
+ void display()
}
class Practica2.Graphs.BarChart {
+ void display()
}


Practica2.Graphs.iCreateDataBase <|.. Practica2.Graphs.ChartDataBase
org.jfree.ui.ApplicationFrame <|-- Practica2.Graphs.Chart
Practica2.Graphs.Chart <|-- Practica2.Graphs.LineChart
Practica2.Graphs.Chart <|-- Practica2.Graphs.BarChart
@enduml